2009-03-04  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Skip files that are out of the repository root.
	
2009-03-04  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/Command.py:
	* pycvsanaly2/extensions/Metrics.py:

	Add Commands module from misc, and use it in Metrics extension
	instead of the commands module.
	
2009-03-04  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBProxyContentHandler.py:

	Add debug messages to ProxyContentHandler.
	
2009-03-04  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/main.py:

	Remove unneeded import.
	
2009-03-03  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBContentHandler.py:

	Fix infinite loop when a path has been renamed several times to
	the same name.
	
2009-03-03  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Add debug messages when skipping files.
	
2009-03-03  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/file_types.py:

	Add RELEASING and Doxyfile as devel-doc files.
	
2009-03-03  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Raise an exception when the metrics extension is not supported for
	the given repository type.
	
2009-03-03  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Use '%' instead of ',' to append arguments to a format string.
	
2009-03-03  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/main.py:
	* pycvsanaly2/CVSParser.py:
	* pycvsanaly2/SVNParser.py:
	* pycvsanaly2/Parser.py:
	* pycvsanaly2/extensions/CommitsLOC.py:
	* pycvsanaly2/extensions/FileTypes.py:
	* pycvsanaly2/extensions/Metrics.py:

	Add support for analyzing subsets of repositories as individual
	respositories. It's useful for repositories containing several
	'modules' each one with its own tags and branches. 
	
2009-03-03  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBContentHandler.py:
